[api] Java 17 silliness